Make Table on Tentang.html and Style01.css and Table hasnt Fixed on Mobile

--- a/css/style01.css
+++ b/css/style01.css
@@ -39,9 +39,6 @@
     border-radius: 40px;
 }
 
-strong {
-    color: yellow;
-}
 
 
 
@@ -120,6 +117,15 @@ strong {
     margin-top: 120px;
 }
 
+.jumbotron table {
+    text-align: center;
+    font-size: 30px;
+    width: 100%;
+}
+.jumbotron .pojok {
+    text-align: left;
+}
+
 /* Footer */
 
 .fa {
@@ -193,4 +199,8 @@ strong {
 
         .profile-kantor {
             margin-bottom: 20px;
+        }
+
+        footer h2 {
+            font-size: 15px;
         }
